20000712-22:03 GMT+2 Maurilio Longo <maurilio.longo@libero.it>

   * source/rtl/teditor.prg
     + Added a bunch of new methods and in particular full support for a soft cursor,
       teditor does not rely upon position of hardware cursor anymore.
     + Added color support
     * made a few changes to use it as a base for tbrwtext class
   * source/debug/tbrwtext.prg
     * changed to use teditor as base class and not tbrowse. This makes it possible to single step
       inside normal size source code files. Try to single step inside dbu using previous version
       and you will understand me ;-)
   * source/debug/debugger.prg
     * a few changes to accomodate for new tbrwtext class

   Please note that there is not (yet) support for highlighting of breakpoints.

2000-07-12 14:05 UTC-0400 David G. Holm <dholm@jsd-llc.com>

   * source/rdd/dbcmd.c
     ! Added missing ( AREAP ) type override on line 3529.

2000-07-12 21:41 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
     *contrib/rdd_ads/ads1.c
     * Warning fixed, reported by David G. Holm

2000-07-12 12:30 UTC-0400 David G. Holm <dholm@jsd-llc.com>

   * config/c.cf
     * Changed to force flex to run before gcc, but after bison.

   * source/compiler/Makefile
     + Added test for HB_LEX being equal to SIMPLEX to compile
       Harbour with SimpLex. If HB_LEX is missing or is set to
       any value other than SIMPLEX, then Lex/Flex is used.

20000712-18:18 GMT+2 Maurilio Longo <maurilio.longo@libero.it>

   * source\compiler\Makefile
     + added hbslex.c and changed to remove flex usage
   * config\c.cf
     * changed to force bison to run before gcc

2000-07-12 16:08 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
    * source/rdd/dbf1.c
      * fixed a bug in dbfUpdateRecord() which caused problems with
      * FieldPut(), noted by Luiz Rafael Culik

2000-07-12-06:50 Luiz Rafael Culik <culik@sl.conex.net>
 +doc/en/stontype.txt
    *information of Harbour strong type feature
 +doc/en/sayget.txt