@@ -1,3 +1,12 @@
+2000-07-12 20:45 UTC+0800 Ron Pinkas <ron@profit-master.com>
+   * source/compiler/harbour.slx
+     * Corrected support for PARAMETERS
+     + Added type casts to allow c++ mode compilation
+
+   * source/compiler/simplex.c
+     - Removed unused vars.
+     + Added type casts to allow c++ mode compilation
+
 20000712-22:03 GMT+2 Maurilio Longo <maurilio.longo@libero.it>
 
    * source/rtl/teditor.prg
